2019-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/montage.c (MontageImages): Fix wrong length argument to
	strlcat() when building montage directory, which could allow heap
	overwrite.

	* coders/png.c (RegisterPNGImage): Pass correct size value to
	strlcat().  Under Apple's OS X (and possibly other targets)
	strlcat() writes bytes beyond what it needs to (but within the
	range it is allowed to) causing a crash due to the wrong limit
	value.  Fixes SourceForge issue #609 `gm identify foo.png` crashes
	on macOS (v 1.3.32).

	* www/Changes.rst: Update ChangeLog links due to new year, and
	1.3.32 release.

2019-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (WriteBMPImage): Detect arithmetic overflow of
	image_size. Add more tracing. Reduce compilation warnings.
	(EncodeImage): Reduce compilation warnings.
	(WriteBMPImage): Assure that chromaticity uses double-precision
	for multiply before casting to unsigned integer.

	* coders/wpg.c (ReallocColormap): Reduce compilation warnings.

	* coders/braille.c (WriteBRAILLEImage): Reduce compilation
	warnings.

	* coders/dib.c (WriteDIBImage): Detect arithmetic overflow of
	image_size. Reduce compilation warnings.
	(EncodeImage): Reduce compilation warnings.

	* coders/locale.c (WriteLOCALEImage): Reduce compilation warnings.

2019-06-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (dist-zstd): Use the maximum possible compression
	level (22) when creating a Zstd-compressed tarball to get close to
	lzip/xz compression levels.

	* coders/tiff.c (ReadTIFFImage): Fix typo in initialization of
	'tile' pointer variable.

	* version.sh: Updates in preparation for 1.3.32 release.

2019-06-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (release): Add a release target to make it easier to
	produce and sign the release files.  Add a zstd-compressed output
	tarball just because we can.

2019-06-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
